[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Levels/PushableBlock.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 47.2274, 27.1013 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.8425, 31.839 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 4 )

[node name="PushableBlock" type="Node2D"]
script = ExtResource( 2 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
mode = 2

[node name="Area2D" type="Area2D" parent="RigidBody2D"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="RigidBody2D"]
modulate = Color( 0.00392157, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
visible = false
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="RigidBody2D"]
visible = false
position = Vector2( 0, -36 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Area2D2"]
shape = SubResource( 3 )
[connection signal="body_entered" from="RigidBody2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="RigidBody2D/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="RigidBody2D/Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="RigidBody2D/Area2D2" to="." method="_on_Area2D2_body_exited"]
